# dialysis-cdss-demo

./: .env.example  .gitignore  MEMORY.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: dose_rules.yaml  thresholds.yaml  trend_rules.yaml
docs/: demo_deployment.md  hospital_integration.md  main_workbench_guide.md  nocodb_schema.md  nocodb_views.md  progress_report_for_colleagues.md
prompts/: esa_rules.md  iron_rules.md  mbd_rules.md  output_schema.json  system.md
scripts/: export_nocodb_csv.py  sync_hospital_data.py  watch_hospital_inbox.py
src/: __init__.py  audit.py  db.py  demo_data.py  main.py  settings.py
src/adapters/: __init__.py  nocodb_client.py  patient_source_excel.py
src/adapters/hospital/: __init__.py  admission_client.py  csv_utils.py  exam_client.py  lab_client.py  medication_client.py  notify_client.py  patient_client.py  procedure_client.py  schedule_client.py
src/domain/: __init__.py  deidentify.py  dose_adjustment.py  entities.py  rules.py  trend_recommendation.py
src/services/: claude_client.py  hospital_inbox.py  hospital_sync.py  notify.py  recommendation_service.py
tests/: test_csv_export.py  test_db.py  test_deidentify.py  test_dose_adjustment.py  test_hospital_inbox.py  test_hospital_sync.py  test_notify.py  test_permissions.py  test_rules.py  test_trend_recommendation.py
tools/: create_progress_docx.py
